# my_tinyrenderer

./: .gitignore  CMakeLists.txt  MatrixVectorMath.cpp  MatrixVectorMath.h  README.md  gradient.tga  main.cpp  matrix&vector_math.cpp  matrix&vector_math.h  matrix_vector_math.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
